:deploy: Deploy task for day-3

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,8 +55,8 @@ nav .left ul li {
 /* form styling */
 
 form {
-  width: 300px;
-  margin: 50px auto;
+  width: 35%;
+  margin: 25px auto;
 }
 
 input,
