--- a/assets/css/blog.css
+++ b/assets/css/blog.css
@@ -158,6 +158,7 @@ select {
   border: 2px solid #dbdbdb;
   border-radius: 8px;
   display: flex;
+  cursor: pointer;
 }
 
 .blog .blog-list .blog-list-item .blog-image {
