--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -106,4 +106,74 @@ h2 {
   height: 300px;
   overflow: hidden;
   background-size: cover;
+  background-image: url("../images/pede.jpg");
+  border-top-left-radius: inherit;
+  border-top-right-radius: inherit;
+}
+
+#main-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  border: 1px rgba(0, 0, 0, 0.084) solid;
+  width: 70%;
+  margin: auto;
+  margin-top: 22px;
+  padding: 15px 50px;
+  box-shadow: 0px 0px 30px rgba(224, 224, 224, 0.881);
+  border-radius: 15px;
+}
+
+#first-column {
+  flex: 50%;
+  margin-right: 50px;
+}
+
+#first-column-paragraph {
+  text-align: justify;
+}
+
+#contact-button {
+  font-family: "Poppins";
+  background-color: #111727;
+  color: white;
+  padding: 5px 25px;
+  border-radius: 20px;
+  margin-bottom: 20px;
+  margin-right: 30px;
+  margin-top: 15px;
+  cursor: pointer;
+}
+
+#contact-link {
+  text-decoration: none;
+  color: white;
+}
+
+#social-links a {
+  margin-top: 30px;
+  font-size: 35px;
+  text-decoration: none;
+  color: black;
+}
+
+#social-links i {
+  font-size: 30px;
+}
+
+.social-icon {
+  margin-right: 14px;
+  cursor: pointer;
+}
+
+#second-column {
+  flex: 50%;
+  height: 100%;
+  background-color: white;
+  width: max-content;
+  border: 1px solid rgba(0, 0, 0, 0.084);
+  text-align: center;
+  border-radius: 15px;
+  box-shadow: 0px 0px 30px rgba(224, 224, 224, 0.881);
 }
