--- a/assets/css/navbar.css
+++ b/assets/css/navbar.css
@@ -59,6 +59,15 @@ nav .left ul li {
   display: none;
 }
 
+.hamburger-nav {
+  border: 2px solid white;
+  text-align: center;
+  padding: 10px;
+  color: white;
+  font-weight: bold;
+  font-size: x-large;
+}
+
 @media only screen and (max-width: 500px) {
   .left ul li {
     display: none;
