--- a/assets/css/detail.css
+++ b/assets/css/detail.css
@@ -13,7 +13,7 @@
 }
 
 #self-portrait {
-  height: 45vh;
+  height: 55vh;
   width: 35vw;
   object-fit: cover;
 }
@@ -22,7 +22,7 @@
   flex: 50%;
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 
 #duration-section,
