:art: Improving component styling on project pages

--- a/assets/css/project.css
+++ b/assets/css/project.css
@@ -253,3 +253,9 @@ select {
   line-height: 140%;
   text-align: justify;
 }
+
+@media only screen and (max-width: 650px) {
+  .width-date-mobile {
+    width: 45% !important;
+  }
+}
