:boom: Add Handlebars.js as template engine and routing

--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -17,17 +16,14 @@
     />
     <title>Detail Page</title>
     <style>
-      .active {
-        font-weight: bold;
-        color: #111727 !important;
-      }
+      .active { font-weight: bold; color: #111727 !important; }
     </style>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary ps-4">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/">
           <img src="./assets/images/dumbways.png" style="width: 50px" />
         </a>
         <button
@@ -44,20 +40,21 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="project.html"
-                >My Project</a
-              >
+              <a class="nav-link active" aria-current="page" href="project">My
+                Project</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="testimonial.html"
-                >Testimonial</a
-              >
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="testimonial"
+              >Testimonial</a>
             </li>
           </ul>
-          <a href="contact.html" class="btn btn-danger">Contact Me</a>
+          <a href="contact" class="btn btn-danger">Contact Me</a>
         </div>
       </div>
     </nav>
@@ -137,13 +134,15 @@
       eveniet animi dolores veniam, ducimus, cupiditate velit ullam dolore
       consequatur quidem sint, fugiat odio voluptates voluptatem sit minus
       veritatis esse enim? Dolor officiis officia iusto magni odio assumenda
-      quibusdam. <br />Debitis quam at sit est id distinctio quod possimus
-      dolores placeat. Cum labore autem vitae aperiam voluptatum minima natus
-      voluptates aspernatur! Iusto rerum blanditiis ad incidunt deserunt? Ad,
-      distinctio ipsa. Fugit voluptatibus soluta exercitationem earum tempora
-      voluptas perferendis nisi rerum deserunt. Illum, dolore? Sint, mollitia!
-      Ex rerum nostrum quaerat laboriosam quidem necessitatibus, in, eius
-      expedita placeat voluptatibus et. Excepturi, sequi. <br />
+      quibusdam.
+      <br />Debitis quam at sit est id distinctio quod possimus dolores placeat.
+      Cum labore autem vitae aperiam voluptatum minima natus voluptates
+      aspernatur! Iusto rerum blanditiis ad incidunt deserunt? Ad, distinctio
+      ipsa. Fugit voluptatibus soluta exercitationem earum tempora voluptas
+      perferendis nisi rerum deserunt. Illum, dolore? Sint, mollitia! Ex rerum
+      nostrum quaerat laboriosam quidem necessitatibus, in, eius expedita
+      placeat voluptatibus et. Excepturi, sequi.
+      <br />
       Velit labore illo voluptatem earum libero quisquam magni maiores? Omnis,
       officiis quo suscipit explicabo itaque, obcaecati, molestias rem dolores
       magnam eveniet cumque quisquam aut ut voluptatem expedita consequatur
