--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -20,7 +20,7 @@
      <!-- navbar -->
     <nav class="navbar navbar-expand-lg bg-body-tertiary ps-4">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/">
           <img src="./assets/images/dumbways.png" style="width: 50px" />
         </a>
         <button
@@ -37,20 +37,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="project.html"
+              <a class="nav-link" aria-current="page" href="project"
                 >My Project</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="testimonial.html"
+              <a class="nav-link" aria-current="page" href="testimonial"
                 >Testimonial</a
               >
             </li>
           </ul>
-          <a href="contact.html" class="btn btn-danger">Contact Me</a>
+          <a href="contact" class="btn btn-danger">Contact Me</a>
         </div>
       </div>
     </nav>
