--- a/views/index.hbs
+++ b/views/index.hbs
@@ -15,17 +15,14 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
     <style>
-      .active {
-        font-weight: bold;
-        color: #111727 !important;
-      }
+      .active { font-weight: bold; color: #111727 !important; }
     </style>
   </head>
 
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary ps-4">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/">
           <img src="./assets/images/dumbways.png" style="width: 50px" />
         </a>
         <button
@@ -42,22 +39,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="index.html"
-                >Home</a
-              >
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="project.html"
-                >My Project</a
-              >
+              <a class="nav-link" aria-current="page" href="project">My Project</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="testimonial.html"
-                >Testimonial</a
-              >
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="testimonial"
+              >Testimonial</a>
             </li>
           </ul>
-          <a href="contact.html" class="btn btn-danger">Contact Me</a>
+          <a href="contact" class="btn btn-danger">Contact Me</a>
         </div>
       </div>
     </nav>
@@ -83,8 +78,7 @@
                   href="contact.html"
                   class="btn me-4"
                   style="background-color: #111727; color: white"
-                  >Contact</a
-                >
+                >Contact</a>
                 <a href="./assets/pdf/CV_Alfi.pdf">View CV</a>
               </div>
             </div>
