--- a/views/testimonial.hbs
+++ b/views/testimonial.hbs
@@ -27,7 +27,7 @@
   <body>
     <nav class="navbar navbar-expand-lg bg-body-tertiary ps-4">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index.html">
+        <a class="navbar-brand" href="/">
           <img src="./assets/images/dumbways.png" style="width: 50px" />
         </a>
         <button
@@ -44,10 +44,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
+              <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="project.html"
+              <a class="nav-link" aria-current="page" href="project"
                 >My Project</a
               >
             </li>
@@ -55,12 +55,12 @@
               <a
                 class="nav-link active"
                 aria-current="page"
-                href="testimonial.html"
+                href="testimonial"
                 >Testimonial</a
               >
             </li>
           </ul>
-          <a href="contact.html" class="btn btn-danger">Contact Me</a>
+          <a href="contact" class="btn btn-danger">Contact Me</a>
         </div>
       </div>
     </nav>
