--- a/views/project.hbs
+++ b/views/project.hbs
@@ -11,10 +11,7 @@
     />
     <link rel="stylesheet" href="./assets/css/project.css" />
     <style>
-      .active {
-        font-weight: bold;
-        color: black !important;
-      }
+      .active { font-weight: bold; color: black !important; }
     </style>
   </head>
 
@@ -42,14 +39,15 @@
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="project"
-                >My Project</a
-              >
+              <a class="nav-link active" aria-current="page" href="project">My
+                Project</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="testimonial"
-                >Testimonial</a
-              >
+              <a
+                class="nav-link"
+                aria-current="page"
+                href="testimonial"
+              >Testimonial</a>
             </li>
           </ul>
           <a href="contact" class="btn btn-danger">Contact Me</a>
@@ -63,23 +61,28 @@
       <div>
         <div class="form-container">
           <form
+            action="/project"
+            method="POST"
             style="display: flex; flex-direction: column; align-items: center"
-            onsubmit="addBlog(event)"
           >
             <h1 class="text-center mt-3"><strong>ADD MY PROJECT</strong></h1>
 
             <div class="w-50">
               <div class="mb-3">
-                <label for="input-blog-title" class="form-label mt-4"
-                  >Project Name</label
-                >
-                <input type="text" class="form-control" id="input-blog-title" />
+                <label for="input-blog-title" class="form-label mt-4">Project
+                  Name</label>
+                <input
+                  type="text"
+                  class="form-control"
+                  id="input-blog-title"
+                  name="title"
+                />
               </div>
-              <div class="mb-3 d-flex justify-content-between width-date-mobile">
+              <div
+                class="mb-3 d-flex justify-content-between width-date-mobile"
+              >
                 <div class="w-100">
-                  <label for="input-blog-start" class="form-label"
-                    >Start Date</label
-                  >
+                  <label for="input-blog-start" class="form-label">Start Date</label>
                   <input
                     type="date"
                     class="form-control"
@@ -87,20 +90,20 @@
                   />
                 </div>
                 <div class="w-100 ms-3">
-                  <label for="input-blog-end" class="form-label"
-                    >End Date</label
-                  >
+                  <label for="input-blog-end" class="form-label">End Date</label>
                   <input type="date" class="form-control" id="input-blog-end" />
                 </div>
               </div>
               <div class="mb-3">
-                <label for="input-blog-content" class="form-label"
-                  >Description</label
-                >
+                <label
+                  for="input-blog-content"
+                  class="form-label"
+                >Description</label>
                 <textarea
                   class="form-control"
                   id="input-blog-content"
                   style="height: 100px"
+                  name="description"
                 ></textarea>
               </div>
               <div class="mb-3">
@@ -145,13 +148,18 @@
                 </div>
               </div>
               <div class="mb-3 mt-4">
-                <label for="input-blog-image" class="form-label"
-                  >Upload Image</label
-                >
-                <input type="file" class="form-control" id="input-blog-image" />
+                <label for="input-blog-image" class="form-label">Upload Image</label>
+                <input
+                  type="file"
+                  class="form-control"
+                  id="input-blog-image"
+                  name="image"
+                />
               </div>
               <div class="d-flex justify-content-end">
                 <button type="submit" class="btn btn-primary">Submit
+                </button>
+              </div>
             </div>
           </form>
         </div>
@@ -160,7 +168,28 @@
       <div id="test"></div>
       <hr class="line" />
       <div id="contents" class="blog-list">
-        <!-- dynamic content would be here -->
+        {{#each data}}
+          <div class="blog-list-item" onclick="window.location.href='detail'">
+            <div class="blog-image">
+              <img src="${dataBlog[i].inputImage}" alt="" />
+            </div>
+            <div class="blog-content">
+              <div class="btn-group">
+                <button class="btn-edit">Edit Post</button>
+                <button class="btn-post">Delete Post</button>
+              </div>
+              <h1>
+                <a href="detail" target="_blank">{{this.title}}</a>
+              </h1>
+              <div class="detail-blog-content">
+                | Alfi Dharmawan
+              </div>
+              <p>
+                {{this.description}}
+              </p>
+            </div>
+          </div>
+        {{/each}}
       </div>
     </div>
     <!-- end form -->
