:lipstick: Improving layout on project post

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <style>
       .active { font-weight: bold; color: #111727 !important; }
     </style>
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary ps-4">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
-          <img src="./assets/images/dumbways.png" style="width: 50px" />
+          <img src="/assets/images/dumbways.png" style="width: 50px" />
         </a>
         <button
           class="navbar-toggler"
@@ -79,7 +79,7 @@
                   class="btn me-4"
                   style="background-color: #111727; color: white"
                 >Contact</a>
-                <a href="./assets/pdf/CV_Alfi.pdf">View CV</a>
+                <a href="/assets/pdf/CV_Alfi.pdf">View CV</a>
               </div>
             </div>
             <div id="social-links" class="ps-3">
