--- a/views/contact.hbs
+++ b/views/contact.hbs
@@ -8,7 +8,7 @@
     rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
     crossorigin="anonymous"/>
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -21,7 +21,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary ps-4">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
-          <img src="./assets/images/dumbways.png" style="width: 50px" />
+          <img src="/assets/images/dumbways.png" style="width: 50px" />
         </a>
         <button
           class="navbar-toggler"
@@ -98,6 +98,6 @@
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"
   ></script>
-    <script src="./assets/js/script.js"></script>
+    <script src="/assets/js/script.js"></script>
   </body>
 </html>
