--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -8,8 +8,8 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/detail.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/detail.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
@@ -24,7 +24,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary ps-4">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
-          <img src="./assets/images/dumbways.png" style="width: 50px" />
+          <img src="/assets/images/dumbways.png" style="width: 50px" />
         </a>
         <button
           class="navbar-toggler"
@@ -66,7 +66,7 @@
       <div id="first-column-detail">
         <img
           id="self-portrait"
-          src="./assets/images/img_detail.jpg"
+          src="/assets/images/img_detail.jpg"
           alt="self-portrait"
         />
       </div>
