--- a/views/project.hbs
+++ b/views/project.hbs
@@ -9,7 +9,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
-    <link rel="stylesheet" href="./assets/css/project.css" />
+    <link rel="stylesheet" href="/assets/css/project.css" />
     <style>
       .active { font-weight: bold; color: black !important; }
     </style>
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary ps-4">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
-          <img src="./assets/images/dumbways.png" style="width: 50px" />
+          <img src="/assets/images/dumbways.png" style="width: 50px" />
         </a>
         <button
           class="navbar-toggler"
@@ -175,8 +175,8 @@
               <img src="{{this.image}}" alt="" />
             </div>
             <div class="blog-content">
-              <div class="btn-group">
-                <button class="btn-edit">Edit Post</button>
+              <div class="d-flex justify-content-end btn-group">
+                <button class="btn-edit me-3">Edit Post</button>
                 <button class="btn-post">Delete Post</button>
               </div>
               <h1>
@@ -200,6 +200,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
-    <script src="./assets/js/project.js"></script>
+    <script src="/assets/js/project.js"></script>
   </body>
 </html>
