--- a/views/testimonial.hbs
+++ b/views/testimonial.hbs
@@ -14,8 +14,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
     />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="stylesheet" href="./assets/css/testimonial.css" />
+    <link rel="stylesheet" href="/assets/css/style.css" />
+    <link rel="stylesheet" href="/assets/css/testimonial.css" />
     <style>
       .active {
         font-weight: bold;
@@ -28,7 +28,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary ps-4">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">
-          <img src="./assets/images/dumbways.png" style="width: 50px" />
+          <img src="/assets/images/dumbways.png" style="width: 50px" />
         </a>
         <button
           class="navbar-toggler"
