--- a/views/edit-project.hbs
+++ b/views/edit-project.hbs
@@ -61,12 +61,11 @@
       <div>
         <div class="form-container">
           <form
-            action="/project"
+            action="/edit-project/{{data.id}}"
             method="POST"
-            enctype="multipart/form-data"
             style="display: flex; flex-direction: column; align-items: center"
           >
-            <h1 class="text-center mt-3"><strong>ADD MY PROJECT</strong></h1>
+            <h1 class="text-center mt-3"><strong>UPDATE MY PROJECT</strong></h1>
 
             <div class="w-50">
               <div class="mb-3">
@@ -77,6 +76,7 @@
                   class="form-control"
                   id="input-blog-title"
                   name="title"
+                  value="{{data.title}}"
                 />
               </div>
               <div
@@ -105,7 +105,7 @@
                   id="input-blog-content"
                   style="height: 100px"
                   name="description"
-                ></textarea>
+                >{{data.description}}</textarea>
               </div>
               <div class="mb-3">
                 <label class="form-label">Technologies</label>
@@ -148,15 +148,6 @@
                   </div>
                 </div>
               </div>
-              <div class="mb-3 mt-4">
-                <label for="input-blog-image" class="form-label">Upload Image</label>
-                <input
-                  type="file"
-                  class="form-control"
-                  id="input-blog-image"
-                  name="image_uploaded"
-                />
-              </div>
               <div class="d-flex justify-content-end">
                 <button type="submit" class="btn btn-primary">Submit
                 </button>
@@ -164,41 +155,6 @@
             </div>
           </form>
         </div>
-      </div>
-
-      <div id="test"></div>
-      <hr class="line" />
-      <div id="contents" class="blog-list">
-        {{#each data}}
-          <div class="blog-list-item">
-            <div class="blog-image">
-              <img src="{{this.image}}" alt="" />
-            </div>
-            <div class="blog-content">
-              <div class="d-flex justify-content-end btn-group">
-                <button
-                  class="btn-edit me-3"
-                  onclick="window.location.href='/edit-project/{{this.id}}'"
-                >Edit Post</button>
-                <button
-                  class="btn-post"
-                  onclick="window.location.href='/delete-project/{{this.id}}'"
-                >Delete Post</button>
-              </div>
-              <h1>
-                <a href="detail/{{this.id}}">{{this.title}}</a>
-              </h1>
-              <div class="detail-blog-content">
-                {{this.createdAt}}
-                |
-                {{this.author}}
-              </div>
-              <p>
-                {{this.description}}
-              </p>
-            </div>
-          </div>
-        {{/each}}
       </div>
     </div>
     <!-- end form -->
