:rocket: Add detail project function from postgreSQL

--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -85,7 +85,7 @@
         <div id="technologies-section">
           <p class="no-margin-top"><strong>Technologies</strong></p>
 
-          {{#each data.techCheck}}
+          {{#each data.technologies}}
             <div class="tech-row">
               <div class="icon-text tech-item">
                 <i class="fa fa-code"> </i>
