--- a/views/project.hbs
+++ b/views/project.hbs
@@ -177,7 +177,7 @@
         {{#each data}}
           <div class="blog-list-item">
             <div class="blog-image">
-              <img src="{{this.image}}" alt="" />
+              <img src="{{this.image}}" alt="Project Image" />
             </div>
             <div class="blog-content">
               <div class="d-flex justify-content-end btn-group">
