:rocket: Add post function with postgreSQL

--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -73,7 +73,7 @@
           <p class="no-margin-top"><strong>Duration</strong></p>
           <div class="icon-text">
             <i class="fa fa-calendar"> </i>
-            <p class="no-margin">{{data.dateStart}} - {{data.dateEnd}}</p>
+            <p class="no-margin">{{data.start_date}} - {{data.end_date}}</p>
           </div>
 
           <div class="icon-text mt-3">
