--- a/views/project.hbs
+++ b/views/project.hbs
@@ -61,7 +61,7 @@
       <div>
         <div class="form-container">
           <form
-            action="/project"
+            action="/create-project"
             method="POST"
             enctype="multipart/form-data"
             style="display: flex; flex-direction: column; align-items: center"
@@ -88,7 +88,7 @@
                     type="date"
                     class="form-control"
                     id="input-blog-start"
-                    name="startDate"
+                    name="start_date"
                   />
                 </div>
                 <div class="w-100 ms-3">
@@ -97,7 +97,7 @@
                     type="date"
                     class="form-control"
                     id="input-blog-end"
-                    name="endDate"
+                    name="end_date"
                   />
                 </div>
               </div>
@@ -120,7 +120,7 @@
                     <input
                       type="checkbox"
                       id="nodeCheck"
-                      name="techCheck"
+                      name="technologies"
                       value="NodeJS"
                       class="me-3 shadow-sm"
                     />
@@ -128,7 +128,7 @@
                     <input
                       type="checkbox"
                       id="reactCheck"
-                      name="techCheck"
+                      name="technologies"
                       value="ReactJS"
                       class="me-3 mt-3 shadow-sm"
                     />
@@ -138,7 +138,7 @@
                     <input
                       type="checkbox"
                       id="nextCheck"
-                      name="techCheck"
+                      name="technologies"
                       value="NextJS"
                       class="me-3 shadow-sm"
                     />
@@ -146,7 +146,7 @@
                     <input
                       type="checkbox"
                       id="typesCheck"
-                      name="techCheck"
+                      name="technologies"
                       value="Typescript"
                       class="me-3 mt-3 shadow-sm"
                     />
@@ -194,7 +194,7 @@
                 <a href="detail/{{this.id}}">{{this.title}}</a>
               </h1>
               <div class="detail-blog-content">
-                {{this.createdAt}}
+                {{this.created_date}}
                 |
                 {{this.author}}
               </div>
