--- a/views/edit-project.hbs
+++ b/views/edit-project.hbs
@@ -39,18 +39,18 @@
               <a class="nav-link" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="project">My
+              <a class="nav-link active" aria-current="page" href="/project">My
                 Project</a>
             </li>
             <li class="nav-item">
               <a
                 class="nav-link"
                 aria-current="page"
-                href="testimonial"
+                href="/testimonial"
               >Testimonial</a>
             </li>
           </ul>
-          <a href="contact" class="btn btn-danger">Contact Me</a>
+          <a href="/contact" class="btn btn-danger">Contact Me</a>
         </div>
       </div>
     </nav>
@@ -88,11 +88,19 @@
                     type="date"
                     class="form-control"
                     id="input-blog-start"
+                    value="{{startDate}}"
+                    disabled
                   />
                 </div>
                 <div class="w-100 ms-3">
                   <label for="input-blog-end" class="form-label">End Date</label>
-                  <input type="date" class="form-control" id="input-blog-end" />
+                  <input
+                    type="date"
+                    class="form-control"
+                    id="input-blog-end"
+                    value="{{endDate}}"
+                    disabled
+                  />
                 </div>
               </div>
               <div class="mb-3">
@@ -107,47 +115,7 @@
                   name="description"
                 >{{data.description}}</textarea>
               </div>
-              <div class="mb-3">
-                <label class="form-label">Technologies</label>
-                <div class="d-flex mt-2">
-                  <div class="me-5">
-                    <input
-                      type="checkbox"
-                      id="nodeCheck"
-                      name="nodeCheck"
-                      value="NodeJS"
-                      class="me-3 shadow-sm"
-                    />
-                    <label for="nodeCheck"> Node JS</label><br />
-                    <input
-                      type="checkbox"
-                      id="reactCheck"
-                      name="reactCheck"
-                      value="ReactJS"
-                      class="me-3 mt-3 shadow-sm"
-                    />
-                    <label for="reactCheck"> React JS</label><br />
-                  </div>
-                  <div class="ms-5">
-                    <input
-                      type="checkbox"
-                      id="nextCheck"
-                      name="nextCheck"
-                      value="NextJS"
-                      class="me-3 shadow-sm"
-                    />
-                    <label for="nextCheck">Next JS</label><br />
-                    <input
-                      type="checkbox"
-                      id="typesCheck"
-                      name="typesCheck"
-                      value="Typescript"
-                      class="me-3 mt-3 shadow-sm"
-                    />
-                    <label for="typesCheck">TypeScript</label><br />
-                  </div>
-                </div>
-              </div>
+
               <div class="d-flex justify-content-end">
                 <button type="submit" class="btn btn-primary">Submit
                 </button>
