--- a/views/detail.hbs
+++ b/views/detail.hbs
@@ -54,7 +54,19 @@
               >Testimonial</a>
             </li>
           </ul>
-          <a href="/contact" class="btn btn-danger">Contact Me</a>
+          {{#if loggedIn}}
+            <a href="/contact" class="btn btn-primary">Contact Me</a>
+            <a href="/logout" class="btn btn-danger ms-3">Logout</a>
+          {{else}}
+            <a
+              href="/register"
+              class="text-decoration-none text-dark me-3"
+            >Register</a>
+            <a
+              href="/login"
+              class="text-decoration-none text-dark me-3"
+            >Login</a>
+          {{/if}}
         </div>
       </div>
     </nav>
